--- a/style.css
+++ b/style.css
@@ -4,13 +4,70 @@
 }
 h1{
     text-align: center;
+    padding-top: 8vh;
+    padding-bottom: 8vh;
+    background-color: 	#ADD8E6;
+    color: #ffffff;
 }
 #form{
-    height: 20vh;
+    padding-top: 5vh;
+    min-height: 20vh;
 }
 form {
-    margin-left: 42vw;
+    width: 18vw;
+    margin: auto;
+    font-size: 3vh;
+}
+select{
+    font-size: 3vh;
+    font-family: Times, "Times New Roman", serif;
+    color: rgb(117, 154, 167);
+}
+#insira input{
+    height: 3vh;
+}
+label{
+    color: rgb(69, 99, 110)
+}
+.btn{
+    background-color: rgb(149, 192, 206);
+    color:#ffffff;
+    border:none;
+    height: 4vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    font-size:2.5vh;
+}
+#escolha{
+    margin-top: 4vh;
+    margin-bottom: 4vh;
 }
 table{
-    margin-left: 42vw;
+    min-width: 50vw;
+    margin-left: auto;
+    margin-right:auto;
+    background-color:#ADD8E6;
+    padding-top: 2vh;
+}
+th{
+    border: #000000 solid 1px;
+}
+#h3div{
+    margin-top:5vh;
+    width:100vw;
+    background-color:#ADD8E6;
+    padding-left: 43vw;
+}
+h3{
+    color: #ffffff;
+    padding-top:2vh;
+    font-size: 3.5vh;
+}
+#divtab{
+    background-color: #ADD8E6;
+    min-height: 35vh;
+}
+td{
+    border: solid 1px #000000;
+    justify-content: center
 }
